RESOLVED FIXED100411
Incorrect tile size in the slow scrolling case
https://bugs.webkit.org/show_bug.cgi?id=100411
Summary Incorrect tile size in the slow scrolling case
Simon Fraser (smfr)
Reported 2012-10-25 13:23:57 PDT
In the slow scrolling case we're creating huge tiles, which is a mistake. Combination of http://trac.webkit.org/changeset/132427 and http://trac.webkit.org/changeset/132504
Attachments
Patch (3.47 KB, patch)
2012-10-25 13:29 PDT, Simon Fraser (smfr)
bdakin: review+
Simon Fraser (smfr)
Comment 1 2012-10-25 13:29:29 PDT
Simon Fraser (smfr)
Comment 2 2012-10-25 13:40:47 PDT
Note You need to log in before you can comment on or make changes to this bug.