Incorrect tile size in the slow scrolling case https://bugs.webkit.org/show_bug.cgi?id=100411

Reviewed by Beth Dakin.

Source/WebCore:

If we're in slow scrolling mode, we don't want to inflate the
coverage rect based on scrollability. This ensures that the few
big tiles we create have the correct size.

* platform/graphics/ca/mac/TileCache.mm:
(WebCore::TileCache::computeTileCoverageRect):

LayoutTests:

New result with better tile size.

* platform/mac/tiled-drawing/tile-coverage-slow-scrolling-expected.txt:

Canonical link: https://commits.webkit.org/118441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132527 268f45cc-cd09-0410-ab3c-d52691b4dbfc